--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </ul>
         <div class="icon nav__menu"></div>
       </nav>
+      <h1>I can help you build your ideas into reality.</h1>
     </header>
 
     <!-- Navigation -->
