--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container nav-container">
       <!-- Navigation -->
       <nav>
-        <div class="logo"></div>
+        <a href="#"><div class="logo"></div></a>
         <ul class="nav-links">
           <li class="nav-item"><a href="#about-section">About</a></li>
           <li class="nav-item"><a href="#work-section">Works</a></li>
@@ -144,14 +144,14 @@
         <h1>Contact</h1>
         <div class="contact__cta">
           <a href="tel:+001122334455"
-            ><button>
-              <div class="icon contact__cta-phone"></div>
+            ><button class="contact__cta-phone">
+              <div class="icon contact__cta-phone-icon"></div>
               <span>+00 1122 3344 55</span>
             </button>
           </a>
           <a href="mailto:contact@wizard.com"
-            ><button>
-              <div class="icon contact__cta-email"></div>
+            ><button class="contact__cta-email">
+              <div class="icon contact__cta-email-icon"></div>
               <span>contact@wizard.com</span>
             </button>
           </a>
@@ -162,9 +162,9 @@
             eiusmod
           </p>
           <div class="contact__social">
-            <div class="icon social__behance"></div>
-            <div class="icon social__linkedin"></div>
-            <div class="icon social__awwwards"></div>
+            <a href="#"> <div class="icon social__behance"></div></a>
+            <a href="#"><div class="icon social__linkedin"></div></a>
+            <a href="#"><div class="icon social__awwwards"></div></a>
           </div>
         </div>
       </div>
@@ -178,7 +178,7 @@
           <img src="./assets/svg/copyright.svg" alt="" />
           <p>All rights received</p>
         </div>
-        <div class="logo"></div>
+        <a href="#"><div class="logo"></div></a>
       </footer>
     </section>
 
